implemented changes discussed with andrew

--- a/ESR/appendix.tex
+++ b/ESR/appendix.tex
@@ -2,7 +2,7 @@ In this section we provide the omitted details for the proofs and methodology pr
 
 \subsection{Justification of the conditioning step yielding equation (\ref{conditionalDistnFixed_f}) in Section \textcolor{blue}{\ref{general_framework}}}
 
-We now provide a full justification for the conditioning step yielding equation (\ref{conditionalDistnFixed_f}) in Section \textcolor{blue}{\ref{general_framework}}. The justification essentially follows from Theorem 3.3 in \textcolor{blue}{\citep{owhadi2015conditioning}}. This theorem is given below (we only give the part of the theorem we require): \vspace{5pt}
+We now provide a full justification for the conditioning step yielding equation (\ref{conditionalDistnFixed_f}) in Section \textcolor{blue}{\ref{general_framework}}. The justification essentially follows from \textcolor{blue}{\citep[Theorem 3.3]{owhadi2015conditioning}}. This theorem is given below (we only give the part of the theorem we require): \vspace{5pt}
 
 \begin{theorem}
     \label{condition_gaussian_hilbert}
