--- a/ESR/intro.tex
+++ b/ESR/intro.tex
@@ -1,9 +1,9 @@
 
-Mathematical models of physical systems are often expressed in terms of Partial Differential Equations (PDEs). In such models uncertainty is often introduced, either through a lack of knowledge of the parameters of the system or via inherent randomness in the system itself. Furthermore, these mathematical models and the associated computer simulations are often simplifications of the actual system leading to possible model misspecification \textcolor{blue}{\citep{girolami2019statistical}}. The numerical algorithms used to simulate such models also induce uncertainty \textcolor{blue}{\citep{conrad2017statistical}}. For example, it is often the case that a numerical method involves a finite-dimensional approximation of the unknown function. Our work in this project aims to investigate how the uncertainty resulting from using such an approximation can be captured in a probabilistic framework. In particular, we will consider a specific class of noisy linear PDEs and investigate placing two different priors on the solution to the PDE. The first prior will be one which arises from the true solution operator in a well-defined manner, while the second will result from using a finite-dimensional approximation to the solution. Our goal will be to quantify explicitly how these two priors differ as a function of an appropriate discretization parameter. This will be investigated for a particular example in Section \textcolor{blue}{\ref{elliptic_bv_prob}}.
+Mathematical models of physical systems are often expressed in terms of Partial Differential Equations (PDEs). In such models uncertainty is often introduced, either through a lack of knowledge of the parameters of the system or via inherent randomness in the system itself. Furthermore, these mathematical models and the associated computer simulations are often simplifications of the actual system leading to possible model misspecification \textcolor{blue}{\citep{girolami2019statistical}}. The numerical algorithms used to simulate such models also induce uncertainty \textcolor{blue}{\citep{conrad2017statistical}}. For example, it is often the case that a numerical method involves a finite-dimensional approximation of the unknown function. Our work in this project aims to investigate how the uncertainty resulting from using such an approximation can be captured in a probabilistic framework. In particular, we will consider a specific class of noisy linear PDEs and investigate placing two different priors on the solution to the PDE. The first prior will be one which arises from the true solution operator in a well-defined manner, while the second will result from using a finite-dimensional approximation to the solution. One of our goals will be to quantify explicitly how these two priors differ as a function of an appropriate discretization parameter. This will be investigated for a particular example in Section \textcolor{blue}{\ref{elliptic_bv_prob}}.
 
-The computer simulations of these models can also often be very expensive computationally, and as such, these models are rarely used alone in the modelling procedure. Instead, observational data from the actual physical system via measurements is often incorporated as well. Data from measurements is now becoming increasingly available in almost every area of engineering and science, and failure to consider either the data or the model is clearly suboptimal. The issue of combining knowledge from both the model and data is thus of utmost importance and is often referred to as \textbf{data assimilation}, especially when the underlying mathematical model is a potentially stochastic dynamical system and the data may be time-ordered \textcolor{blue}{\citep{law2015data}}. We will consider how such observational data can be incorporated in our framework. In particular, we will condition the two priors mentioned above on this data and investigate how different the resulting posteriors are.
+The computer simulations of these models can also often be very expensive computationally, and as such, these models are rarely used alone in the modelling procedure. Instead, observational data from the actual physical system via measurements is often incorporated as well. Data from measurements is now becoming increasingly available in almost every area of engineering and science, and failure to consider either the data or the model is clearly suboptimal. The issue of combining knowledge from both the model and data is thus of utmost importance and is often referred to as \textbf{data assimilation}, especially when the underlying mathematical model is a potentially stochastic dynamical system and the data may be time-ordered \textcolor{blue}{\citep{law2015data}}. We will consider how such observational data can be incorporated in our framework. In particular, one of our main goals we will condition the two priors mentioned above on this data and investigate how the difference in the priors carries forward to the difference in the posteriors.
 
-The Bayesian formulation of PDE-based models naturally incorporates all these sources of uncertainty (while still being able to identify the relevant source) and forces one to deal with modelling issues in a clear and precise manner. It allows measurement data to be considered in order to calibrate and tune mathematical models. Moreover, it allows a full characterization of all possible solutions to be found, together with their relative probabilities \textcolor{blue}{\citep{stuart2010inverse}}.
+The Bayesian formulation of PDE-based models naturally incorporates all these sources of epistemic uncertainty (while still being able to identify the relevant source) and forces one to deal with modelling issues in a clear and precise manner. It allows measurement data to be considered in order to calibrate and tune mathematical models. Moreover, it allows a full characterization of all possible solutions to be found, together with their relative probabilities \textcolor{blue}{\citep{stuart2010inverse,sarkka2013bayesian}}.
 
 The statistical formulation of PDE-based models is necessary in many applications in order to handle in a precise manner the uncertainty present in the model. It allows this uncertainty to be propagated forward and gives clear answers for how much trust can be placed in the conclusions of the model. The finite element method (FEM) \textcolor{blue}{\citep{strang1973analysis}} is one of the most widely used methods for numerically approximating the solution of PDEs modelling natural and physical systems. Since FEM is an integral part of the study of many physical systems it is essential that we are able to fully quantify the uncertainty that using FEM introduces to our models and simulations.
 
