--- a/ESR/lit_review.tex
+++ b/ESR/lit_review.tex
@@ -1,6 +1,6 @@
-Our project is focused on providing detailed analysis of the uncertainty introduced by utilising numerical approximations for solving potentially noisy PDEs. The propagation of this error through to further inference is then investigated, when for instance observational data is incorporated. This project lies at the intersection of the fields of data assimilation, data-centric engineering, probabilistic numerics and Bayesian inference. We now provide a brief overview of the relevant background material for the project.
+Our project is focused on providing detailed analysis of the uncertainty introduced by utilising numerical approximations for solving potentially noisy PDEs. The propagation of this error through to further inference is then investigated, when for instance observational data is incorporated. This project lies at the intersection of the fields of data assimilation, data-centric engineering, and Bayesian inference. We now provide a brief overview of the relevant background material for the project.
 
-There is increasing interest in investigating how the language of probabilistic inference can be applied to numerical problems in order to provide a more detailed notion of the uncertainty resulting from numerically approximating an intractable problem \textcolor{blue}{\citep{diaconis1988bayesian,o1992bayesian,skilling1992bayesian,hennig2015probabilistic}}. Numerical algorithms can be viewed as estimation rules for a latent, often intractable quantity given the results of tractable computations. Such algorithms can be considered to perform inference and are thus open to being analysed using the formal framework of probability theory. The field of Probabilistic Numerics (PN) \textcolor{blue}{\citep{probNumericsSite}} involves the study of so called ``probabilistic numerical methods"; these are numerical algorithms which take in a probability distribution over its inputs and give out a probability distribution over its output. Some probabilistic methods can even be shown to coincide with classical ones under certain conditions (references can be found at \textcolor{blue}{\citep{probNumericsSite}}). It is worth pointing out that so far we have only been referring to problems of a deterministic nature and probability theory is used as a means of providing a notion of the uncertainty inherent in using a numerical approximation to the solution of an intractable deterministic problem. In our work we will not restrict attention to purely deterministic problems but instead will consider potentially noisy PDEs. We will then seek to analyse the problem from the viewpoint of PN.
+There is increasing interest in investigating how the language of probabilistic inference can be applied to numerical problems in order to provide a more detailed notion of the uncertainty resulting from numerically approximating an intractable problem \textcolor{blue}{\citep{diaconis1988bayesian,o1992bayesian,skilling1992bayesian,hennig2015probabilistic}}. Numerical algorithms can be viewed as estimation rules for a latent, often intractable quantity given the results of tractable computations. Such algorithms can be considered to perform inference and are thus open to being analysed using the formal framework of probability theory. The field of Probabilistic Numerics (PN) \textcolor{blue}{\citep{probNumericsSite}} involves the study of so called ``probabilistic numerical methods"; these are numerical algorithms which take in a probability distribution over its inputs and give out a probability distribution over its output. Some probabilistic methods can even be shown to coincide with classical ones under certain conditions (references can be found at \textcolor{blue}{\citep{probNumericsSite}}). It is worth pointing out that so far we have only been referring to problems of a deterministic nature and probability theory is used as a means of providing a notion of the uncertainty inherent in using a numerical approximation to the solution of an intractable deterministic problem. In our work we will not restrict attention to purely deterministic problems but instead will consider potentially noisy PDEs.
 
 Much work has already been undertaken in the field of PN into applications to differential equations, especially for ODEs. Classic numerical algorithms for solving initial value problems (IVPs) provide an approximate solution often defined on a grid of time points. This numerical solution is often computed iteratively by collecting information from evaluations of the vector field associated to the system of differential equations. Probabilistic numerical methods instead provide probability measures, as opposed to point estimates, over the space of possible solutions to the IVP. In the PN literature there are two main approaches to solving ODEs which we now briefly outline.
 
